<resources>
    <string name="app_name">QuickDoc</string>
    <string name="schedule_a_doctor_s_appointment">Schedule a Doctor\'s Appointment</string>
    <string name="check_your_next_doctor_s_appoitments">Check Your Next Doctor\'s Appoitments</string>
    <string name="review_your_last_doctor_s_appointments">Review Your Last Doctor\'s Appointments</string>
    <string name="choose_an_speciallity_to_search_for">Choose an speciallity to search for</string>
    <string name="firebase_sign_out">Sign Out</string>
    <string name="select_a_specialty">Select a Doctor\'s Specialty:</string>
    <string name="km" translatable="false">Km</string>
    <string name="days">days</string>
    <string name="user_not_logged_in">User is not logged-in</string>
    <string name="fail_to_connect">Failed to connect to server. Please check your internet connection.</string>
    <string name="doctor_presentation">Presentation</string>
    <string name="accepted_health_care">Accepted Health Care</string>
    <string name="address">Address</string>
    <string name="office">Office</string>
    <string name="schedule_appoiontment">Schedule Appointment with Doctor</string>
    <string name="distance">Distance</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="geriatric">Geriatric</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="nephrologist">Nephrologist</string>
    <string name="orthopaedist">Orthopaedist</string>
    <string name="ophthalmologist">Ophthalmologist</string>
    <string name="oncologist">Oncologist</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="urologist">Urologist</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="select_one_of_the_available_horary">Select one of the available horary</string>
    <string name="confirm_appointment_dialog">Confirm appointment with Dr.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_prev_day_of_tomorrow">Cannot schedule a Doctor\'s appointment before tomorrow</string>
    <string name="alert_next_day_too_far">Cannot schedule a Doctor\'s appointment for more than 90 days ahead</string>
    <string name="on">on</string>
    <string name="at"> at </string>
    <string name="see_your_next_appointments_below">See your next appointments below:</string>
    <string name="no_appointments_for_this_user">No appointments scheduled for this user</string>
    <string name="cancel_appoiontment">Cancel Appointment with Doctor</string>
    <string name="dialog_message_confirm_cancel">Would you like to cancel this appointment?</string>
    <string name="review_title">Review Title</string>
    <string name="type_your_review_here">Type your review here</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="start_review_grade" translatable="false">2.5</string>
    <string name="grade">Grade</string>
    <string name="picture_of_the_doctor">Picture of the Doctor</string>
    <string name="register_doctor_review">Register Doctor Review</string>
    <string name="dialog_message_confirm_review">Would you like to register this review?</string>
    <string name="save_review_confirmation_dialog">Review saved successfully on Database</string>
    <!--<string name="appwidget_text">EXAMPLE</string>-->
    <!--<string name="add_widget">Add widget</string>-->
    <string name="doctor_list_explanation">See below the list of Doctors found</string>
    <string name="available_in">Available in</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="doctor_photo">Doctor Photo</string>
    <string name="amil_health_care">Amil Health Care</string>
    <string name="bradesco_health_care">Bradesco Health Care</string>
    <string name="hapvida_health_care">Hapvida Health Care</string>
    <string name="prevent_health_care">Prevent Senior Health Care</string>
    <string name="sulamerica_health_care">SulAmerica Health Care</string>
    <string name="unimed_health_care">Unimed Health Care</string>
    <string name="doctor_avarage_rate">Doctor Avarage Rate</string>
    <string name="star_image">Star image</string>
    <string name="directions_to_address">Directions to address</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_waiting_days">Sort by waiting days</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="phone_image_dial_to_number">Phone Image. Dial to Doctor\'s office</string>
    <string name="image_left_arrow_description">Image of left arrow. Select the previous day</string>
    <string name="image_right_arrow_description">Image of right arrow. Select the next day</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="date_separator" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="could_not_get_location">Could not get your location</string>
    <string name="no_past_appointments_found">You already evaluated all your past appointments</string>
    <string name="cardiologist_key" translatable="false">cardiologist</string>
    <string name="dermatologist_key" translatable="false">dermatologist</string>
    <string name="geriatric_key" translatable="false">geriatric</string>
    <string name="gynecologist_key" translatable="false">gynecologist</string>
    <string name="nephrologist_key" translatable="false">nephrologist</string>
    <string name="orthopaedist_key" translatable="false">orthopaedist</string>
    <string name="ophthalmologist_key" translatable="false">ophthalmologist</string>
    <string name="oncologist_key" translatable="false">oncologist</string>
    <string name="pediatrician_key" translatable="false">pediatrician</string>
    <string name="psychiatrist_key" translatable="false">psychiatrist</string>
    <string name="urologist_key" translatable="false">urologist</string>
</resources>
