<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quickdoc.SelectDateTimeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBarSelectDate"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="120sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10" />

        <ImageView
            android:id="@+id/iv_prev_day"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_day"
            app:layout_constraintEnd_toStartOf="@+id/tv_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day"
            android:contentDescription="@string/image_left_arrow_description"
            app:srcCompat="@drawable/prev_day" />

        <ImageView
            android:id="@+id/iv_next_day"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_day"
            app:layout_constraintTop_toBottomOf="@+id/tv_day"
            app:srcCompat="@drawable/next_day"
            android:contentDescription="@string/image_right_arrow_description" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_week_day"
            tools:text="December" />

        <TextView
            android:id="@+id/tv_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/select_one_of_the_available_horary"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_month" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/tv_explanation"
            app:layout_constraintTop_toBottomOf="@+id/tv_explanation">

            <!--<RadioButton-->
                <!--tools:text="9:00"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<RadioButton-->
                <!--tools:text="9:00"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<RadioButton-->
                <!--tools:text="9:00"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<RadioButton-->
                <!--tools:text="9:00"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->

        </RadioGroup>

        <Button
            android:id="@+id/bt_schedule_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:text="@string/schedule_appoiontment" />

        <TextView
            android:id="@+id/tv_week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_day"
            tools:text="Segunda-feira" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
